@@ -4,6 +4,7 @@ Changes in Release 2.3.2
 [JOST-98] - AttributeConsumingServices in SPSSODescriptorSchemaValidator
 [JOST-101] - Expired message should be logged with WARN level instead of ERROR
 [JOST-103] - Wrong log level for "Credential cache cleared"
+[JOST-104] - Expired metadata element caused fatal IllegalArgumentException
 
 Changes in Release 2.3.1
 =============================================
